[package]
name = "tcp_network"
version = "0.1.0"
authors = ["quanna <quanna.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
dotenv = "0.15.0"
rand = "0.7.3"
serde = { version = "1.0.106" , features = ["derive"] }
serde_json = "1.0.51"
r2d2_redis = "0.13.0"


[dependencies.amethyst]
version = "0.15"
features = ["empty"]
